--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: '全部生命'
+name: '全部生命系列'
 description: 'Mundana is a free Jekyll theme for awesome people like you, Medium like.'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
@@ -42,7 +42,6 @@ defaults:
       path: "_posts"
     values:
       layout: post
-      author: sal
       avatar: /assets/images/avatar1.jpg
       
   # all pages
@@ -56,7 +55,7 @@ markdown: kramdown
 highlighter: rouge
 
 # Paginate
-paginate: 5
+paginate: 10
 
 
 
