--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://adrien-faure.fr/kodama-theme"
+base_url = "https://totality-of-life.com"
 
 # Whether to automatically compile all Sass files in the sass directory
 compile_sass = false
@@ -33,11 +33,4 @@ favicon = "static/img/avatar.jpg"
 # Enter your email
 email = "totalityhelp[at]gmail.com"
 
-contact_in_index = true
-
-# Additional menu items
-# `Name` is what it is displayed, `path` is the url
-menu_items = [
-   { path = "#contacts", name = "Contact" },
-]
 
